Removed the repository url in favor of PublishRepositoryUrl and turns on the ContinuousIntegrationBuild property when building in appveyor

--- a/src/ArgumentCaptor/ArgumentCaptor.csproj
+++ b/src/ArgumentCaptor/ArgumentCaptor.csproj
@@ -18,8 +18,7 @@
     <Description>Provides functionality like It.IsAny and ItExpr.IsAny while capturing the value of the arguments.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/maartenkools/Moq.Contrib.ArgumentCaptor</PackageProjectUrl>
-    <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://github.com/maartenkools/Moq.Contrib.ArgumentCaptor.git</RepositoryUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
 
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
