--- a/tests/ArgumentCaptor.Tests/ArgumentCaptor.Tests.csproj
+++ b/tests/ArgumentCaptor.Tests/ArgumentCaptor.Tests.csproj
@@ -10,6 +10,7 @@
     <GenerateAssemblyFileVersionAttribute>False</GenerateAssemblyFileVersionAttribute>
     <GenerateAssemblyInformationalVersionAttribute>False</GenerateAssemblyInformationalVersionAttribute>
 
+    <DeterministicSourcePaths>false</DeterministicSourcePaths>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
