--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,7 @@ before_build:
 build_script:
 - cmd: dotnet restore
 - cmd: dotnet build -c Release --no-restore /p:ContinuousIntegrationBuild=true 
-- cmd: dotnet pack -p:PackageVersion=%GitVersion_NuGetVersion% -c Release --no-build --output %APPVEYOR_BUILD_FOLDER%/artifacts/
+- cmd: dotnet pack  -p:ContinuousIntegrationBuild=true -p:PackageVersion=%GitVersion_NuGetVersion% -c Release --no-build --output %APPVEYOR_BUILD_FOLDER%/artifacts/
 
 test_script:
 - cmd: dotnet test
