--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ before_build:
 
 build_script:
 - cmd: dotnet restore
-- cmd: dotnet build -c Release --no-restore
+- cmd: dotnet build /p:Deterministic=true /p:ContinuousIntegrationBuild=true -c Release --no-restore
 - cmd: dotnet pack  -p:PackageVersion=%GitVersion_NuGetVersion% -c Release --no-build --output %APPVEYOR_BUILD_FOLDER%/artifacts/
 
 test_script:
